Add implementation for mapping CityGML v2 and v3